2015-05-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2531: Location of docs directory in
	install-data-local is incorrect
	* Makefile.am:
	(install-data-local): 'docs' directory
	is in BUILD_OUTPUT_DIR, not BUILD_IMAGE_DIR.
	* NEWS: Updated.

2015-05-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2530: PaX mark the installed JDK so it runs
	on hardened systems
	* Makefile.am:
	(install-exec-local): PaX mark installed JDK.
	* NEWS: Updated.

2015-07-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR94: empty install target in Makefile.am
	* Makefile.am:
	(add-tzdata-support): Redefine using BUILD_SDK_DIR.
	(clean-add-tzdata-support): Likewise.
	(add-tzdata-support-debug): Likewise using BUILD_DEBUG_SDK_DIR.
	(clean-add-tzdata-support-debug): Likewise.
	(add-tzdata-support-boot): Likewise using BUILD_BOOT_SDK_DIR.
	(clean-add-tzdata-support-boot): Likewise.
	(install-exec-local): Remove copying of *.so files
	from $(BUILD_SDK_DIR)/lib ; none in OpenJDK 7.
	(install-data-local): Remove blacklisted.certs and
	tzdb.dat which don't exist in OpenJDK 7. Add
	jre/lib/zi and fontconfig files. Copy icons as
	java-1.7.0.png.

2015-05-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR94: empty install target in Makefile.am
	* Makefile.am:
	(BUILD_SDK_DIR): Added.
	(BUILD_JRE_DIR): Likewise.
	(BUILD_JRE_ARCH_DIR): Redefine using BUILD_SDK_DIR.
	(BUILD_DEBUG_SDK_DIR): Added.
	(BUILD_DEBUG_JRE_DIR): Likewise.
	(BUILD_DEBUG_JRE_ARCH_DIR): Redefine using
	BUILD_DEBUG_SDK_DIR.
	(BUILD_BOOT_SDK_DIR): Added.
	(BUILD_BOOT_JRE_DIR): Likewise.
	(BUILD_BOOT_JRE_ARCH_DIR): Redefine using
	BUILD_BOOT_SDK_DIR.
	(DESKTOP_FILES): Likewise.
	(EXTRA_DIST): Redefine using DESKTOP_FILES.
	(install): Removed.
	(bootstrap-directory-stage2): Redefine using
	BUILD_BOOT_SDK_DIR.
	(icedtea): Redefine using BUILD_SDK_DIR and
	BUILD_JRE_DIR.
	(add-systemtap): Likewise.
	(clean-add-systemtap): Likewise.
	(check-crypto): Redefine using BUILD_SDK_DIR.
	(add-archive): Likewise.